// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constants/analytics should render matching snapshot when in production 1`] = `
Object {
  "trackerId": "UA-109205585-1",
}
`;

exports[`constants/analytics should render matching snapshot when not in production 1`] = `
Object {
  "trackerId": "UA-000000000-0",
}
`;
